src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>AC__c</fullName>
        <label>AC</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ASM_Genset__c</fullName>
        <label>ASM Genset</label>
        <picklist>
            <picklistValues>
                <fullName>Ankush Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Satpal Dabas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajeev Bhardwaj</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheetal Kumar Pal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G. Ravi Kumar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajeev Raman</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Audit_Date__c</fullName>
        <label>Audit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Audit_Response__c</fullName>
        <label>Audit Response</label>
        <picklist>
            <picklistValues>
                <fullName>Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Contacted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone not Reachable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Back Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BM_Name__c</fullName>
        <label>BM Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Backup_Requirement__c</fullName>
        <label>Backup Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Budget__c</fullName>
        <label>Budget</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Call_Feedback__c</fullName>
        <label>Call Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Bought</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bought Competion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Manager Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM/RM Engaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Call Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Owner_Name__c</fullName>
        <label>Call Owner Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Enquiry_Notes__c</fullName>
        <label>Customer Enquiry Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Profile__c</fullName>
        <label>Customer Profile</label>
        <picklist>
            <picklistValues>
                <fullName>Cold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warm &amp; Discussing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hot</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Offered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition is Present</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Segment__c</fullName>
        <label>Customer Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Verbatim__c</fullName>
        <label>Customer Verbatim</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <label>Dealer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealership_Enquiry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dealership Enquiry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Sales_Rep__c</fullName>
        <label>Email Sales Rep</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Enquiry_Forward__c</fullName>
        <label>Enquiry Forward</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enquiry_Type__c</fullName>
        <label>Enquiry Type</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Final_Status__c</fullName>
        <label>Final Status</label>
        <picklist>
            <picklistValues>
                <fullName>Win</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Happy_Feet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Happy Feet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Key_Account_Manager__c</fullName>
        <label>Key Account Manager</label>
        <picklist>
            <picklistValues>
                <fullName>CHANDRA PRAKASH PANT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NITIN ASTHANA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAJESH SRIVASTVA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KRISHNENDU SEN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SANTOSH JOSHI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>L.SURESH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SHRINIVAS RAO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAGAR SUDHAKAR PATIL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RAHUL KULKARNI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MOHAN D BONDE</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Entered_By__c</fullName>
        <label>Lead Entered By</label>
        <picklist>
            <picklistValues>
                <fullName>Shubham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meenakshi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sheeba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manju</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neetu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randhir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagesh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Passed_To__c</fullName>
        <label>Lead Passed To</label>
        <picklist>
            <picklistValues>
                <fullName>Product Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RM/BM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Key Account Manager</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Lead_Transfer_Date__c</fullName>
        <label>Lead Transfer Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Followup_Date__c</fullName>
        <label>Next Followup Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>No_Of_Fans__c</fullName>
        <label>No Of Fans</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_Of_Lights__c</fullName>
        <label>No Of Lights</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Presently_Using_Inverter__c</fullName>
        <label>Presently Using Inverter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pricing_Requested__c</fullName>
        <label>Pricing Requested</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Inverter/UPS – Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter/UPS – Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online UPS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generators</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter batteries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate batteries (Car/Truck/Tractor)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Solar Solutions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Accessories</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customized Solution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exports</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Manager__c</fullName>
        <label>Product Manager</label>
        <picklist>
            <picklistValues>
                <fullName>Rajnish Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harpreet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Kukreja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rupesh Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puneet Chabra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudrendu Dutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previous customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renu Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>exports@su-kam.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Solution_Pitched__c</fullName>
        <label>Product Solution Pitched</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Revenue_Generated__c</fullName>
        <label>Revenue Generated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Roof_Space_Available__c</fullName>
        <label>Roof Space Available</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Feedback__c</fullName>
        <label>Sales Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Product Details Discussed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quotation Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Discussion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closure Pending with Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Awaited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Changed Mind</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost to Competitor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_Owner__c</fullName>
        <label>Sales Lead Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Rajnish Sharma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harpreet Singh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pooja Kukreja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rupesh Gupta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Puneet Chabra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rudrendu Dutta</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renu Chauhan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>exports@su-kam.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shweta Mehta</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Mobile_Number__c</fullName>
        <label>Sales Mobile Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sales_Rep_Name__c</fullName>
        <label>Sales Rep Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Source__c</fullName>
        <label>Secondary Source</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Television__c</fullName>
        <label>Television</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notEqual</operation>
            <value>Qualified</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.PHONE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.RATING</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>